[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ravan-infra-x-lite"
version = "1.0.0"
description = "Fast, stable infrastructure inventory and response analysis tool for Termux."
authors = [{name = "RAVAN"}]
requires-python = ">=3.13"
dependencies = [
    "requests",
    "aiohttp",
    "httpx[http2]",
    "dnspython",
    "tldextract",
    "ipwhois",
    "cryptography",
    "pyOpenSSL",
    "rich",
    "colorama",
    "ipaddress"
]

[project.scripts]
rq = "rqrv.main:main"
