[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rqrv"
version = "2.0.0"
description = "Production-grade infrastructure inventory and response analysis tool for Termux."
authors = [{name = "RQ"}]
requires-python = ">=3.13"
dependencies = [
    "requests",
    "aiohttp",
    "httpx[http2]",
    "dnspython",
    "tldextract",
    "ipwhois",
    "cryptography",
    "pyOpenSSL",
    "rich",
    "ipaddress"
]

[project.scripts]
rq = "rqrv.main:main"
